# cpp-keber

./: .env.example  .gitignore  CMakeLists.txt  Caddyfile  Debug-conanprofile  Dockerfile  Makefile  README.md  conanfile.py  conanprofile.txt  manager.py  requirements.txt  zsh_manager_completions
bot/: .gitignore  CMakeLists.txt  GlobalContext.hpp  Program.cpp  main.cpp
bot/Bot/: .gitignore
bot/BotHandler/: .gitignore  InterfaceBotHandler.hpp  Keys.hpp  list_handlers.cpp  list_handlers.hpp
bot/BotHandler/Access/: .gitignore  AccessCallbackHandler.cpp  AccessCallbackHandler.hpp  AccessHandler.cpp  AccessHandler.hpp
bot/BotHandler/AccessHandler/: .gitignore  AccessCallbackHandler.cpp  AccessCallbackHandler.hpp  AccessHandler.cpp  AccessHandler.hpp
bot/BotHandler/CallbackDeleter/: .gitignore  CallbackDeleterHandler.cpp  CallbackDeleterHandler.hpp
bot/BotHandler/CallbackDeleterHandler/: CallbackDeleterHandler.cpp  CallbackDeleterHandler.hpp
bot/BotHandler/Commands/: .gitignore
bot/BotHandler/Dice/: .gitignore  Dice.cpp  Dice.hpp  DiceHandler.cpp  DiceHandler.hpp
bot/BotHandler/DiceHandler/: .gitignore  DiceHandler.cpp  DiceHandler.hpp
bot/BotHandler/GetStatistic/: .gitignore  GetStatisticHandler.cpp  GetStatisticHandler.hpp
bot/BotHandler/GetTask/: .gitignore  GetTaskHandler.cpp  GetTaskHandler.hpp
bot/BotHandler/GetTasks/: .gitignore  GetTasksHandler.cpp  GetTasksHandler.hpp
bot/BotHandler/Menu/: .gitignore  Menu.cpp  Menu.hpp  MenuHandler.cpp  MenuHandler.hpp
bot/BotHandler/MenuHandler/: .gitignore  MenuHandler.cpp  MenuHandler.hpp
bot/BotHandler/NewTask/: .gitignore  NewTaskHandler.cpp  NewTaskHandler.hpp
bot/BotHandler/NotFound/: .gitignore  NotFound.cpp  NotFound.hpp  NotFoundHandler.cpp  NotFoundHandler.hpp
bot/BotHandler/NotFoundHandler/: .gitignore  NotFoundHandler.cpp  NotFoundHandler.hpp
bot/BotHandler/PatchTask/: .gitignore  PatchTaskHandler.cpp  PatchTaskHandler.hpp
bot/BotHandler/Start/: .gitignore  Start.cpp  Start.hpp  StartHandler.cpp  StartHandler.hpp
bot/BotHandler/StartHandler/: StartHandler.cpp  StartHandler.hpp
bot/BotHandler/TaskTracker/: .gitignore  TaskTrackerHandler.cpp  TaskTrackerHandler.hpp
bot/BotHandler/YouTube/: .gitignore  YouTubeHandler.cpp  YouTubeHandler.hpp
bot/BotHandler/YouTubeHandler/: .gitignore  YouTubeHandler.cpp  YouTubeHandler.hpp
bot/Config/: .gitignore  Config.cpp  Config.hpp  InterfaceConfig.cpp  InterfaceConfig.hpp
bot/Entity/: .gitignore  Repositories.cpp  Repositories.hpp
bot/Entity/Access/: .gitignore  Access.hpp  AccessRepository.cpp  AccessRepository.hpp  InterfaceAccessRepository.hpp
bot/Entity/Callback/: .gitignore  Callback.hpp  CallbackRepository.cpp  CallbackRepository.hpp  InterfaceCallbackRepository.hpp
bot/Entity/Chat/: .gitignore  Chat.hpp  ChatRepository.cpp  ChatRepository.hpp  InterfaceChatRepository.hpp
bot/Entity/Message/: .gitignore  InterfaceMessageRepository.hpp  Message.hpp  MessageRepository.cpp  MessageRepository.hpp
bot/Entity/User/: .gitignore  InterfaceUserRepository.hpp  User.hpp  UserRepository.cpp  UserRepository.hpp
bot/Entity/YouTubeAudioSetting/: .gitignore  InterfaceYouTubeAudioSettingRepository.hpp  YouTubeAudioSetting.hpp  YouTubeAudioSettingRepository.cpp  YouTubeAudioSettingRepository.hpp
bot/HTTPHandler/: .gitignore  HandlerContext.hpp  InterfaceHTTPHandler.hpp  init.cpp  init.hpp
bot/HTTPHandler/CheckHealth/: .gitignore  CheckHealth.cpp  CheckHealth.hpp  CheckHealthHandler.cpp  CheckHealthHandler.hpp
bot/HTTPHandler/CheckHealthHandler/: .gitignore  CheckHealthHandler.cpp  CheckHealthHandler.hpp
bot/Handler/: .gitignore  InterfaceBotHandler.hpp  InterfaceRequestHandler.hpp
bot/Middlewares/: .gitignore  AbstractMiddleware.cpp  InterfaceMiddleware.cpp  LogMiddleware.cpp
bot/Server/: .gitignore  InterfaceServer.cpp  InterfaceServer.hpp  Server.cpp  Server.hpp
bot/Signal/: .gitignore  Signal.cpp  Signal.hpp
bot/src/: .gitignore
task_tracker/: .gitignore  CMakeLists.txt  GlobalContext.hpp  main.cpp
task_tracker/Config/: .gitignore  Config.cpp  Config.hpp  InterfaceConfig.hpp
task_tracker/Entity/: .gitignore
task_tracker/HTTPHandler/: .gitignore  HandlerContext.hpp  init.cpp  init.hpp
test_code/: CMakeLists.txt
utils/: .gitignore  CMakeLists.txt  Datetime.hpp  Env.cpp  Functions.cpp  GlobalFunctions.cpp  JSONKeys.hpp  Random.cpp  Type.cpp  Types.cpp  Types.hpp  env.cpp  random.cpp
utils/AMQP/: .gitignore
utils/Api/: .gitignore  Api.cpp  Api.hpp  Entity.hpp
utils/BotApi/: .gitignore  BotApi.cpp  BotApi.hpp  ContentType.hpp  InlineButton.hpp  InterfaceBotApi.hpp  User.hpp
utils/Config/: .gitignore  Config.cpp  Config.hpp  ConfigParser.cpp  ConfigParser.hpp  InterfaceConfig.cpp  InterfaceConfig.hpp
utils/Entity/: .gitignore  Entity.cpp  Entity.hpp  Repository.hpp  exec_templates.hpp
utils/Env/: .gitignore  Env.cpp  Env.hpp
utils/HTTP/: .gitignore  HTTP.cpp  HTTP.hpp
utils/HTTPServer/: .gitignore
utils/Logger/: .gitignore  AbstractLogger.cpp  EnumLoggerLevel.cpp  FileDailyLogger.cpp  FileDailyLogger.hpp  InterfaceLogger.cpp  InterfaceLogger.hpp  JSONSTDOutLogger.cpp  JSONSTDOutLogger.hpp  Logger.cpp  Logger.hpp  LoggerLevelEnum.cpp  StdOutLogger.cpp  StdOutLogger.hpp
utils/Postgres/: .gitignore  postgres.cpp  postgres.hpp
utils/Python/: .gitignore  bot_api.py  check_oauth.py  config.py  db.py  entrypoint.sh  google_acc.py  google_email_activator.py  logger.py  oauth_login.py  parse_config.py  pythubefix_settings.py  types.py
utils/RabbitMQ/: .gitignore
utils/Random/: .gitignore  Random.cpp  Random.hpp
utils/String/: .gitignore  String.cpp  String.hpp
utils/TGBotApi/: .gitignore  Bot.cpp  InterfaceJSONEncode.hpp  JSONKeys.cpp  JSONKeys.hpp  Query.cpp  Query.hpp  Types.hpp
utils/TaskTrackerApi/: .gitignore  InterfaceTaskTrackerApi.hpp  Task.hpp  TaskTrackerApi.cpp  TaskTrackerApi.hpp
utils/UUID4/: .gitignore  UUID4.cpp  UUID4.hpp
utils/XLSX/: .gitignore  XLSX.cpp  XLSX.hpp
utils/YouTubeApi/: .gitignore  InterfaceYouTubeApi.cpp  InterfaceYouTubeApi.hpp  YouTubeApi.cpp  YouTubeApi.hpp
(+217 files in other folders)
